--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
     <h2><strong>Contact info</strong></h2>
 
     <ul>
-        <li><strong>Email:</strong><a href="email">ebecker03@msn.com</a></li>
+        <li><strong>Email:</strong><a href="email" target="_blank">ebecker03@msn.com</a></li>
         <li><strong>Github:</strong><a href="https://github.com/ebecker03/Profile" target="_blank">ebecker03</a></li>
-        <li><strong>Portfolio:</strong><a href="coming soon">Coming Soon!</a></li>
+        <li><strong>Portfolio:</strong><a href="coming soon" target="_blank">Coming Soon!</a></li>
     </ul>
 </body>
 
