--- a/index.html
+++ b/index.html
@@ -6,44 +6,56 @@
 </head>
 
 <body>
-    <h1>Student Bio</h1>
+    <h1>Eric's Bio</h1>
 
-    <h2>Eric Becker</h2>
-    <img src="C:\Users\ebeck\Pictures\Saved Pictures\20190219_181312.jpg" alt="Eric Becker Profile Picture" />
+    <section>
+        <h2>Eric Becker</h2>
+        <img src="C:\Users\ebeck\Pictures\Saved Pictures\20190219_181312.jpg" alt="Eric Becker Profile Picture"
+            width="200px" height="300px" />
 
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
-        magna aliqua.
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore
+            magna aliqua.
 
-        Doctor strange handlebar waiter what a bounder ron jeremy old west sheriff leslie phillips doctor watson.,
-        handlebar ron jeremy doctor watson. socially mobile en time-warped cabbie what a bounder doctor strange
-        cappuccino catcher waiter doctor watson. leslie phillips cunning like a fox tip top old bean old west sheriff,
-        waiter omar sharif tip top old bean old west sheriff handlebar cunning like a fox leslie phillips doctor strange
-        doctor watson. colonel mustard cappuccino catcher ron jeremy socially mobile sterling en time-warped cabbie
-        doctor watson. what a bounder?
+            Doctor strange handlebar waiter what a bounder ron jeremy old west sheriff leslie phillips doctor watson.,
+            handlebar ron jeremy doctor watson. socially mobile en time-warped cabbie what a bounder doctor strange
+            cappuccino catcher waiter doctor watson. leslie phillips cunning like a fox tip top old bean old west
+            sheriff,
+            waiter omar sharif tip top old bean old west sheriff handlebar cunning like a fox leslie phillips doctor
+            strange
+            doctor watson. colonel mustard cappuccino catcher ron jeremy socially mobile sterling en time-warped cabbie
+            doctor watson. what a bounder?
 
-        Kaiser bill professor plum brigadier vincent price joseph stalin comb karl marx?S
+            Kaiser bill professor plum brigadier vincent price joseph stalin comb karl marx?S
 
-        By jingo. cardinal richelieu borat Sergeant major che guevara. Gunslinger knavish rogue cunning like a fox,
-        knavish rogue grooming lorreto del mar kris kristofferson. man of the year 1986 mr frothy-top gunslinger cunning
-        like a fox colonel mustard educated mr frothy-top, kris kristofferson. man of the year 1986 mr frothy-top
-        lorreto del mar handsome colonel mustard waiter freestyle knavish rogue grooming challenge you to a duel
-        glorious facial hair gunslinger dali educated cunning like a fox mr frothy-top freestyle lorreto del mar?
+            By jingo. cardinal richelieu borat Sergeant major che guevara. Gunslinger knavish rogue cunning like a fox,
+            knavish rogue grooming lorreto del mar kris kristofferson. man of the year 1986 mr frothy-top gunslinger
+            cunning
+            like a fox colonel mustard educated mr frothy-top, kris kristofferson. man of the year 1986 mr frothy-top
+            lorreto del mar handsome colonel mustard waiter freestyle knavish rogue grooming challenge you to a duel
+            glorious facial hair gunslinger dali educated cunning like a fox mr frothy-top freestyle lorreto del mar?
 
-        Tip top old bean top gun Leonine, glorious facial hair top gun socially mobile facial accessory furry facial
-        friend casual style funny walk Leonine tip top old bean graeme souness, facial accessory Semi beard tip top old
-        bean top gun funny walk basil fawlty furry facial friend albert einstein socially mobile facial accessory
-        Leonine glorious facial hair graeme souness casual style? D’artagnan class definer dolor ipsum, class definer
-        clone zone shopper French café patron d’artagnan dolor ipsum blacksmith rock n roll star, jimi hendrix karl marx
-        beefeater blacksmith dodgy uncle clive French café patron cappuccino collector dolor ipsum d’artagnan rock n
-        roll star mouthbrow decathlon champion class definer clone zone shopper?</p>
+            Tip top old bean top gun Leonine, glorious facial hair top gun socially mobile facial accessory furry facial
+            friend casual style funny walk Leonine tip top old bean graeme souness, facial accessory Semi beard tip top
+            old
+            bean top gun funny walk basil fawlty furry facial friend albert einstein socially mobile facial accessory
+            Leonine glorious facial hair graeme souness casual style? D’artagnan class definer dolor ipsum, class
+            definer
+            clone zone shopper French café patron d’artagnan dolor ipsum blacksmith rock n roll star, jimi hendrix karl
+            marx
+            beefeater blacksmith dodgy uncle clive French café patron cappuccino collector dolor ipsum d’artagnan rock n
+            roll star mouthbrow decathlon champion class definer clone zone shopper?</p>
+    </section>
+    <section>
+        <h2><strong>Contact info</strong></h2>
 
-    <h2><strong>Contact info</strong></h2>
-
-    <ul>
-        <li><strong>Email:</strong><a href="email" target="_blank">ebecker03@msn.com</a></li>
-        <li><strong>Github:</strong><a href="https://github.com/ebecker03/Profile" target="_blank">ebecker03</a></li>
-        <li><strong>Portfolio:</strong><a href="coming soon" target="_blank">Coming Soon!</a></li>
-    </ul>
+        <ul>
+            <li><strong>Email:</strong><a href="mailto:ebecker03@msn.com">ebecker03@msn.com</a></li>
+            <li><strong>Github:</strong><a href="https://github.com/ebecker03/Profile" target="_blank">ebecker03</a>
+            </li>
+            <li><strong>Portfolio:</strong><a href="#" target="_blank">Coming Soon!</a></li>
+        </ul>
+    </section>
 </body>
 
 </html>
